--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@
 #datasource
 spring:
   datasource:
-    url: jdbc:mysql://192.168.137.212:3306/onepipe?useSSL=false&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mysql://196.220.248.109:3306/onepipe?useSSL=false&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
     password: rootpassword
   jpa:
@@ -31,7 +31,8 @@ management:
         include: "*"
   security:
     enabled: false
-
+server:
+  port: 7000
 
 
 
