for linux enviroment build

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,9 @@
 #datasource
 spring:
   databaseUrl: localhost:3307/onepipe
+
   datasource:
-    url: jdbc:mysql://localhost:3307/onepipe?useSSL=false&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    url: jdbc:mysql://192.168.20.35:3306/onepipe?useSSL=false&allowPublicKeyRetrieval=true&useLegacyDatetimeCode=false&serverTimezone=UTC
     username: root
     password: rootpassword
   jpa:
